# weft

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum  go.work.sum  main.go
.github/workflows/: bazel-release.yml  build_amd64.yml  build_arm64v8.yml  release.yml  tagging.yaml  test.yml
cmd/: BUILD.bazel  auth.go  list.go  probe.go  proxy.go  root.go  server.go  tunnel.go
container/: BUILD.bazel  WORKSPACE.bazel
scripts/: setup-pre-commit-hook.sh
src/: BUILD.bazel  acme.go  crypto.go  logging.go  proxy.go  proxy_suite_test.go  proxy_test.go  server.go  server_suite_test.go  server_test.go  server_test.go.disabled  server_tunnel_suite_test.go  server_tunnel_test.go  server_tunnel_test.go.disabled  tmp  tunnel.go  vhost.go  vhost_test.go
src/acme/: BUILD.bazel  acme.go  acme_test.go
src/auth/: BUILD.bazel  auth.go  auth_test.go
src/client/: BUILD.bazel  client.go  client_test.go
src/crypto/: BUILD.bazel  crypto.go  crypto_ginkgo_test.go  crypto_test.go
src/dns/: BUILD.bazel  cloudflare.go
src/logging/: BUILD.bazel  logging.go
src/proxy/: BUILD.bazel  proxy.go  proxy_test.go  types.go
src/proxy/vhost/: BUILD.bazel  vhost.go  vhost_test.go
src/proxy/vhost/meter/: BUILD.bazel  meter.go  meter_test.go
src/server/: BUILD.bazel  server.go
src/tunnel/: BUILD.bazel  tunnel.go
src/vhost/: BUILD.bazel  vhost.go  vhost_suite_test.go  vhost_test.go
src/vhost/meter/: BUILD.bazel  meter.go  meter_test.go
test/: BUILD.bazel  test-tcp.sh  test-tunnel-graceful-shutdown.sh  test_billing_reporting.sh  test_billing_reporting_source_dest.sh  test_http_default_port.sh  test_https_tunnel.sh  test_probe.sh  test_secret_enforced.sh  test_tcp_proxy.sh  test_tcp_tunnel.sh  test_tunnel_graceful_shutdown.sh  test_udp_proxy.sh  test_udp_tunnel.sh
types/: BUILD.bazel  types.go
wireguard/: BUILD.bazel  proxy.go  wireguard.go
