load("@gazelle//:def.bzl", "gazelle", "gazelle_test")
load("@rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")
load("@rules_pkg//pkg:pkg.bzl", _pkg_deb = "pkg_deb", _pkg_tar = "pkg_tar")

# gazelle:prefix aquaduct.dev/weft
gazelle(name = "gazelle")

go_library(
    name = "weft_lib",
    srcs = ["main.go"],
    importpath = "aquaduct.dev/weft",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "weft",
    embed = [":weft_lib"],
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "weft_cross",
    target = ":weft",
    goos = "linux",
    goarch = "amd64",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

gazelle_test(
    name = "gazelle_test",
    workspace = "//:BUILD.bazel",  # a file in the workspace root, where the gazelle will be run
)
