load("@gazelle//:def.bzl", "gazelle", "gazelle_test")
load("@rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")
load("@rules_pkg//pkg:pkg.bzl", _pkg_deb = "pkg_deb", _pkg_tar = "pkg_tar")

# gazelle:prefix aquaduct.dev/weft
gazelle(name = "gazelle")

go_library(
    name = "weft_lib",
    srcs = ["main.go"],
    importpath = "aquaduct.dev/weft",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "weft_raw",
    embed = [":weft_lib"],
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "weft_arm64",
    platform = "@rules_go//go/toolchain:linux_arm64",
    target = ":weft_raw",
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "weft",
    platform = "@rules_go//go/toolchain:linux_amd64",
    target = ":weft_raw",
    visibility = ["//visibility:public"],
)

gazelle_test(
    name = "gazelle_test",
    workspace = "//:BUILD.bazel",  # a file in the workspace root, where the gazelle will be run
)
