module(
    name = "aquaduct_weft",
    version = "2025.11.14",
)

bazel_dep(
    name = "rules_go",
    version = "0.59.0",
)
bazel_dep(
    name = "gazelle",
    version = "0.47.0",
)
bazel_dep(
    name = "rules_pkg",
    version = "1.0.1",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(go_mod = "//:go.mod")
go_sdk.download(
    name = "go_sdk",
    version = "1.25.4",
)
use_repo(go_sdk, "go_sdk")

register_toolchains("@go_sdk//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_golang_jwt_jwt_v4",
    "com_github_onsi_ginkgo_v2",
    "com_github_onsi_gomega",
    "com_github_rs_zerolog",
    "com_github_spf13_cobra",
    "org_golang_x_crypto",
    "com_zx2c4_golang_wireguard_wgctrl",
    "com_zx2c4_golang_wireguard",
    "dev_gvisor_gvisor"
)
