load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "auth.go",
        "proxy.go",
        "root.go",
        "server.go",
        "tunnel.go",
    ],
    importpath = "aquaduct.dev/weft/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//src/auth",
        "//src/logging",
        "//src/proxy",
        "//src/server",
        "//src/tunnel",
        "//types",
        "//wireguard",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_vishvananda_netlink//:netlink",
    ],
)
