load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "list.go",
        "probe.go",
        "proxy.go",
        "root.go",
        "server.go",
        "tunnel.go",
    ],
    importpath = "aquaduct.dev/weft/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//src/auth",
        "//src/logging",
        "//src/proxy",
        "//src/proxy/vhost",
        "//src/server",
        "//src/tunnel",
        "//types",
        "//wireguard",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_vishvananda_netlink//:netlink",
    ],
)
