load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_push")
load("@tar.bzl", "tar")

package(default_visibility = ["//visibility:public"])

tar(
    name = "weft_tar",
    srcs = ["//:weft"],
)

tar(
    name = "weft_tar_arm64",
    srcs = ["//:weft_arm64"],
)

oci_image(
    name = "weft_image_amd64",
    base = "@alpine_linux_amd64",
    cmd = ["/weft"],
    tars = [":weft_tar"],
)

oci_image(
    name = "weft_image_arm64_v8",
    base = "@alpine_linux_arm64_v8",
    cmd = ["/weft_arm64"],
    tars = [":weft_tar_arm64"],
)

oci_image_index(
    name = "weft_image",
    images = [
        ":weft_image_amd64",
        ":weft_image_arm64_v8",
    ],
)

oci_push(
    name = "weft_image_push",
    image = ":weft_image",
    remote_tags = ["latest"],
    repository = "ghcr.io/aquaduct-dev/weft",
)
