load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "src_test",
    srcs = [
        "server_tunnel_suite_test.go",
        "server_tunnel_test.go",
    ],
    deps = [
        "//src/auth",
        "//src/crypto",
        "//src/proxy",
        "//src/server",
        "//src/tunnel",
        "//types",
        "//wireguard",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@com_zx2c4_golang_wireguard_wgctrl//wgtypes",
    ],
)
