load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_test(
    name = "test_tcp_tunnel",
    srcs = ["test_tcp_tunnel.sh"],
    data = [
        "//:weft",
    ],
    env = {
        "PROTO": "tcp",
    },
)

sh_test(
    name = "test_http_tunnel",
    srcs = ["test_tcp_tunnel.sh"],
    data = [
        "//:weft",
    ],
    env = {
        "PROTO": "http",
    },
)

sh_test(
    name = "test_https_tunnel",
    srcs = ["test_https_tunnel.sh"],
    data = [
        "test_tcp_tunnel.sh",
        "//:weft",
    ],
    env = {
        "PROTO": "https",
    },
)

sh_test(
    name = "test_udp_tunnel",
    srcs = ["test_udp_tunnel.sh"],
    data = [
        "//:weft",
    ],
    env = {
        "PROTO": "udp",
    },
)

sh_test(
    name = "test_tcp_proxy",
    srcs = ["test_tcp_proxy.sh"],
    data = [
        "//:weft",
    ],
    env = {
        "PROTO": "tcp",
    },
)

sh_test(
    name = "test_http_proxy",
    srcs = ["test_tcp_proxy.sh"],
    data = [
        "//:weft",
    ],
    env = {
        "PROTO": "http",
    },
)

sh_test(
    name = "test_udp_proxy",
    srcs = ["test_udp_proxy.sh"],
    data = [
        "//:weft",
    ],
    env = {
        "PROTO": "udp",
    },
)

sh_test(
    name = "test_tunnel_graceful_shutdown",
    srcs = ["test_tunnel_graceful_shutdown.sh"],
    data = [
        "//:weft",
    ],
)

sh_test(
    name = "test_billing_reporting",
    srcs = ["test_billing_reporting.sh"],
    data = [
        "//:weft",
    ],
)

sh_test(
    name = "test_probe",
    srcs = ["test_probe.sh"],
    data = [
        "//:weft",
    ],
)

sh_test(
    name = "test_secret_enforced",
    srcs = ["test_secret_enforced.sh"],
    data = [
        "//:weft",
    ],
)
