load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "wireguard",
    srcs = ["wireguard.go"],
    importpath = "aquaduct.dev/weft/wireguard",
    visibility = ["//visibility:public"],
    deps = [
        "@com_zx2c4_golang_wireguard//conn:go_default_library",
        "@com_zx2c4_golang_wireguard//device:go_default_library",
        "@com_zx2c4_golang_wireguard//tun:go_default_library",
        "@com_zx2c4_golang_wireguard//tun/netstack:go_default_library",
        "@com_zx2c4_golang_wireguard_wgctrl//wgtypes:go_default_library",
    ],
)
