load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "wireguard",
    srcs = ["wireguard.go"],
    importpath = "aquaduct.dev/weft/wireguard",
    visibility = ["//visibility:public"],
    deps = [
        "@com_zx2c4_golang_wireguard//conn",
        "@com_zx2c4_golang_wireguard//device",
        "@com_zx2c4_golang_wireguard//tun",
        "@com_zx2c4_golang_wireguard//tun/netstack",
        "@com_zx2c4_golang_wireguard_wgctrl//wgtypes",
    ],
)
