load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "acme",
    srcs = ["acme.go"],
    importpath = "github.com/aquaduct-dev/weft/src/acme",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_rs_zerolog//log",
        "@org_golang_x_crypto//acme/autocert",
    ],
)

go_test(
    name = "acme_test",
    srcs = ["acme_test.go"],
    embed = [":acme"],
    deps = [
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@org_golang_x_crypto//acme/autocert",
    ],
)
