load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "auth",
    srcs = ["auth.go"],
    importpath = "github.com/aquaduct-dev/weft/src/auth",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_rs_zerolog//log",
    ],
)

go_test(
    name = "auth_test",
    srcs = ["auth_test.go"],
    embed = [":auth"],
    deps = [
        "@com_github_golang_jwt_jwt_v4//:jwt",
    ],
)
