load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "dns",
    srcs = ["cloudflare.go"],
    importpath = "github.com/aquaduct-dev/weft/src/dns",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cloudflare_cloudflare_go//:cloudflare-go",
        "@com_github_rs_zerolog//log",
    ],
)
