load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "logging",
    srcs = ["logging.go"],
    importpath = "github.com/aquaduct-dev/weft/src/logging",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
    ],
)
