load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "proxy",
    srcs = [
        "proxy.go",
        "types.go",
    ],
    importpath = "aquaduct.dev/weft/src/proxy",
    visibility = ["//visibility:public"],
    deps = [
        "//src/vhost",
        "//wireguard",
        "@com_github_rs_zerolog//log",
        "@dev_gvisor_gvisor//pkg/tcpip/adapters/gonet",
    ],
)

go_test(
    name = "proxy_test",
    srcs = [
        "proxy_suite_test.go",
        "proxy_test.go",
    ],
    embed = [":proxy"],
    deps = [
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
    ],
)
