load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/aquaduct-dev/weft/src/server",
    visibility = ["//visibility:public"],
    deps = [
        "//src/crypto",
        "//src/dns",
        "//src/proxy",
        "//types",
        "//wireguard",
        "@com_github_golang_jwt_jwt_v4//:jwt",
        "@com_github_rs_zerolog//log",
        "@com_zx2c4_golang_wireguard_wgctrl//wgtypes",
    ],
)
