load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "vhost",
    srcs = ["vhost.go"],
    importpath = "github.com/aquaduct-dev/weft/src/proxy/vhost",
    visibility = ["//visibility:public"],
    deps = [
        "//src/acme",
        "//src/proxy/vhost/meter",
        "//wireguard",
        "@com_github_rs_zerolog//log",
        "@org_golang_x_crypto//acme/autocert",
    ],
)

go_test(
    name = "vhost_test",
    srcs = [
        "vhost_suite_test.go",
        "vhost_test.go",
    ],
    embed = [":vhost"],
    deps = [
        "//src/crypto",
        "//src/proxy/vhost/meter",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@com_github_rs_zerolog//log",
    ],
)
