load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "meter",
    srcs = ["meter.go"],
    importpath = "github.com/aquaduct-dev/weft/src/proxy/vhost/meter",
    visibility = ["//visibility:public"],
)

go_test(
    name = "meter_test",
    srcs = ["meter_test.go"],
    deps = [
        ":meter",
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
    ],
)
